Overflow fix for textareas

--- a/themes/AdminLTE/modules/news/admin_news.css
+++ b/themes/AdminLTE/modules/news/admin_news.css
@@ -38,3 +38,7 @@ input[type="file"]:hover {
 	max-width: 50px;
 	max-height: 50px;
 }
+
+.mce-content-body {
+	overflow: scroll;
+}
